# TODO-APP

./: .coverage  .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: Test_TODO.db
dokumentaatio/: Käyttöohje.md  Testausdokumentti.md  arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: .maksukortti_test.py.swp  maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .coveragerc
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl_sekvenssikaavio.md  laajenettu_monopoli.md  machine_sekvenssikaavio.md  monopoli.md
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py  todo_tietokanta.py
src/UI/: login_view.py
src/entities/: TodoApp.py  tasklist.py  tasks.py  todo.py  todoApp.py  user.py
src/repositories/: task_repository.py  user_repository.py
src/service/: task_service.py  todo_service.py  user_service.py
src/tests/: tasklist_test.py  tasks_test.py  todoApp_test.py  todo_service_test.py  todo_test.py  user_test.py
src/tests/repositories/: user_database_test.py
src/tests/services/: User_service_test.py  todo_service_test.py
src/ui/: login_view.py  register_view.py  task_view.py  ui.py
